--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,7 +9,7 @@ RUN npm install
 COPY . .
 
 # Build with the Docker-specific API URL
-ENV REACT_APP_API_URL=http://localhost:5000/api
+ENV REACT_APP_API_URL=http://backend:5000/api
 RUN npm run build
 
 # Stage 2: Serve with Nginx
